<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/Username"
        android:layout_width="213dp"
        android:layout_height="53dp"

        android:autofillHints=""
        android:background="@drawable/roundcorner"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email1"
        android:inputType="textPersonName"
        android:padding="1dp"
        android:textColorHint="#100F0F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="213dp"
        android:layout_height="53dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/roundcorner"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="1dp"
        android:gravity="center"
        android:textColorHint="#100F0F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <Button
        android:id="@+id/login"
        android:layout_width="145dp"
        android:layout_height="49dp"
        android:background="@drawable/button"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <TextView
        android:id="@+id/register"
        android:layout_width="301dp"
        android:layout_height="26dp"
        android:clickable="true"
        android:text="@string/don_t_have_account_register_here"
        android:textAlignment="center"
        android:textColor="#1C0000"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894"
        android:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>